增加启动申请管理员权限

--- a/config.ini
+++ b/config.ini
@@ -6,12 +6,13 @@ total_page = 617
 [config]
 ratios = ["16x9"]
 max_page = 100
-schedule_time = 600
-categories = 110
-purity = 100
-sorting = Toplist
+schedule_time = 0
+categories = 111
+purity = 110
+sorting = Random
 top_range = 6
 image_dir = C:\Users\chen\AppData\Roaming\wallhaven
+auto_run = 0
 
 [data]
 image_ids = ["rddgwm.jpg", "281d5y.png", "l3zmwy.jpg", "8oky1j.jpg", "7232p9.jpg", "rdyyjm.png", "pkw6y3.jpg", "g75r7d.jpg", "8ogod1.jpg", "dpgk5o.jpg", "8oev1j.jpg", "z8odwg.jpg", "e7ek7k.jpg", "x8z9yo.jpg", "6od3px.jpg", "72rxqo.jpg", "pkgkkp.png", "72rd8e.jpg", "8ok7vk.jpg", "pk8pzj.png", "72jwp3.jpg", "dpo38l.jpg", "28ekym.jpg", "x8eydz.jpg", "j3dg1m.jpg", "dpgp5m.jpg"]
