--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Wallhaven",
   "private": true,
-  "version": "4.0.0",
+  "version": "4.0.1",
   "main": "electron/main.js",
   "scripts": {
     "web dev": "vite",
@@ -53,7 +53,6 @@
     "iconv-lite": "^0.6.3",
     "image-size": "^1.0.1",
     "node-gyp": "^9.0.0",
-    "vite-plugin-require-transform": "^1.0.20",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14",
     "win32-api": "^20.4.1"
@@ -62,7 +61,6 @@
     "@vitejs/plugin-vue": "^2.2.0",
     "electron": "^19.1.9",
     "electron-builder": "^22.14.13",
-    "vite": "^2.8.0",
-    "vite-plugin-commonjs": "^0.8.0"
+    "vite": "^2.8.0"
   }
 }
